tests/single_instruction_translation_validation/mcsema/memory-variants/cmpxchgb_m8_r8/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:185:30: error: use of undefined value '@__remill_compare_exchange_memory_8'
  %11 = call %struct.Memory* @__remill_compare_exchange_memory_8(%struct.Memory* %0, i64 %2, i8* nonnull dereferenceable(1) %6, i8 zeroext %7) #24
                             ^
0.01user 0.01system 0:00.02elapsed 107%CPU (0avgtext+0avgdata 27548maxresident)k
0inputs+16outputs (0major+3243minor)pagefaults 0swaps
